# dapr-durabletask

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  RELEASING.md  flake.nix
.config/: nextest.toml
.github/workflows/: automerge-update.yml  cargo-dry-publish.yml  ci.yml  cut-release-dapr-durabletask.yml  cut-release-proto.yml  examples.yml  perf.yml  proto-dep-bump.yml  proto-dep-sync.yml  proto-sync.yml  publish-dapr-durabletask-proto.yml  publish-dapr-durabletask.yml  publish.yml  scheduled.yml  upstream.yml
dapr-durabletask/: Cargo.toml
dapr-durabletask-proto/: Cargo.toml
dapr-durabletask-proto/src/: lib.rs
dapr-durabletask/examples/: activity_sequence.rs  fanout_fanin.rs  human_interaction.rs  workflow_history_propagation.rs
dapr-durabletask/src/: lib.rs
dapr-durabletask/src/api/: errors.rs  failure_details.rs  history_propagation.rs  mod.rs  orchestration_state.rs  orchestration_status.rs  purge_instance_filter.rs  retry_policy.rs
dapr-durabletask/src/client/: grpc_client.rs  mod.rs  options.rs
dapr-durabletask/src/internal/: helpers.rs  mod.rs  otel.rs  serialization.rs
dapr-durabletask/src/task/: activity_context.rs  completable_task.rs  mod.rs  options.rs  orchestration_context.rs  when_all.rs  when_any.rs
dapr-durabletask/src/worker/: activity_executor.rs  grpc_worker.rs  mod.rs  options.rs  orchestration_executor.rs  reconnect_policy.rs  registry.rs
dapr-durabletask/tests/: e2e.rs  orchestration_executor.rs  perf.rs
dapr-durabletask/tests/harness/: mod.rs
proto/: attestation.proto  backend_service.proto  history_events.proto  orchestration.proto  orchestrator_actions.proto  orchestrator_service.proto  runtime_state.proto
