[workspace]
resolver = "3"
members = ["dapr-durabletask", "dapr-durabletask-proto"]

[workspace.package]
version = "0.0.1"
authors = ["Mike Nguyen <hey@mike.ee>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dapr/rust-sdk"
rust-version = "1.85"                           # MSRV
