[package]
name = "dapr-durabletask-proto"
description = "Generated protobuf types for the Dapr Durable Task Framework"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost-build = { version = "0.14.5", optional = true }
tempfile = { version = "3", optional = true }

[features]
generate = ["dep:tonic-prost-build", "dep:tempfile"]

[[bin]]
name = "proto-gen"
path = "src/bin/proto-gen.rs"
required-features = ["generate"]