[package]
name = "dapr-durabletask"
description = "Dapr Durable Task Framework"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
opentelemetry = ["dep:opentelemetry"]
proto = []

[dependencies]
# Protobuf types
dapr-durabletask-proto = { path = "../dapr-durabletask-proto", version = "0.0.2" }

# gRPC
tonic = { version = "0.14.5", features = ["tls-ring"] }

# Async runtime
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"

# Serialisation
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Logging / Tracing
tracing = "0.1.44"

# OpenTelemetry (optional)
opentelemetry = { version = "0.32.0", optional = true }

# Utilities
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
rand = "0.10.1"

[dev-dependencies]
tracing-subscriber = "0.3.23"
libc = "0.2.186"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.0", features = ["testing"] }

[[example]]
name = "activity_sequence"
path = "examples/activity_sequence.rs"

[[example]]
name = "fanout_fanin"
path = "examples/fanout_fanin.rs"

[[example]]
name = "human_interaction"
path = "examples/human_interaction.rs"

[[example]]
name = "workflow_history_propagation"
path = "examples/workflow_history_propagation.rs"
